--- a/hugo.yaml
+++ b/hugo.yaml
@@ -30,14 +30,11 @@ taxonomies:
 
 menu:
   main:
-    - name: Autor
-      url: author/
-      weight: 5
-    - name: Kategorien
-      url: categories/
+    - name: About
+      url: about/
       weight: 10
-    - name: Tags
-      url: tags/
+    - name: Archiv
+      url: archiv/
       weight: 20
     - name: Suche
       url: search/
