--- a/hugo.yaml
+++ b/hugo.yaml
@@ -59,13 +59,13 @@ params:
   ShowCodeCopyButtons: true
   ShowWordCount: true
   ShowRssButtonInSectionTermList: true
-  UseHugoToc: true
+  UseHugoToc: false
   disableSpecial1stPost: false
   disableScrollToTop: false
   comments: false
   hidemeta: false
   hideSummary: true
-  showtoc: false
+  showtoc: true
   tocopen: false
 
   assets:
