Prepare GitHub Pages workflow

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -10,6 +10,10 @@ buildDrafts: false
 buildFuture: false
 buildExpired: false
 
+caches:
+  images:
+    dir: :cacheDir/images
+
 minify:
   disableXML: true
   minifyOutput: true
