Fix legal pages and contact infos

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -76,6 +76,9 @@ params:
     disableHLJS: false # code highlighting
     disableFingerprinting: false # css integrity hashes
 
+  footer:
+    text: "[Impressum](/impressum) | [Datenschutz](/datenschutz)"
+
   homeInfoParams:
     Title: "Tobias Buckdahn"
     Content: >
